# drumlogs

./: LICENSE  README.md  _main.py  config.json  main.py  pre_main.py  pyproject.toml  requirements.txt
configs/: config.json
src/audio_tools/: __init__.py  config.py  engine.py  loader.py  logger.py  processor.py  randomizer.py  sequencer.py
src/dsp/: __init__.py  effect.py  mixer.py  scales.py  synths.py
