[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drumlogs"
version = "0.0.1"
authors = [
  { name="Yana Suryana (yanas-logs)" },
]
description = "Utility library for dynamic mapping and management of drum audio samples."
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
"Homepage" = "https://github.com/yanas-logs/drumlogs"
